force-app/main/default/objects/DU_Damage__c/DU_Damage__c.object-meta.xml
<CustomObject>
    <description>CDM: A damage describes details of a single vehicle damage.</description>
    <label>Damage</label>
    <nameField>
        <displayFormat>D-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Damages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>