force-app/main/default/objects/DU_Damage__c/fields/DU_AmountOfDamage__c.field-meta.xml
<CustomField>
    <fullName>DU_AmountOfDamage__c</fullName>
    <description>CDM: Amount of damage/reduced value</description>
    <label>Amount of Damage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>