force-app/main/default/objects/DU_Damage__c/fields/DU_AppraisalReport__c.field-meta.xml
<CustomField>
    <fullName>DU_AppraisalReport__c</fullName>
    <description>CDM: Link to an externally hosted appraisal</description>
    <label>Appraisal Report</label>
    <type>Url</type>
</CustomField>