force-app/main/default/objects/DU_Damage__c/fields/DU_Asset__c.field-meta.xml
<CustomField>
    <fullName>DU_Asset__c</fullName>
    <description>CDM: Relationship with the parent record.</description>
    <label>Asset Name</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Damages</relationshipLabel>
    <relationshipName>DU_Damages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>