force-app/main/default/objects/DU_Damage__c/fields/DU_DamageAmountType__c.field-meta.xml
<CustomField>
    <fullName>DU_DamageAmountType__c</fullName>
    <description>CDM: Type of damage amount/reduced value (e.g. Repair costs, depreciation)</description>
    <label>Type of Damage Amount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RepairCosts</fullName>
                <label>Repair Costs</label>
            </value>
            <value>
                <fullName>Depreciation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>