force-app/main/default/objects/DU_Damage__c/fields/DU_DamageClassificationNeeded__c.field-meta.xml
<CustomField>
    <fullName>DU_DamageClassificationNeeded__c</fullName>
    <description>CDM: Damage classification</description>
    <label>Damage Classification Needed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Claim</fullName>
            </value>
            <value>
                <fullName>DetermineFindings</fullName>
                <label>Determine Findings</label>
            </value>
            <value>
                <fullName>GarageDiagnosticRequired</fullName>
                <label>Garage Diagnostic Required</label>
            </value>
            <value>
                <fullName>MissingPart</fullName>
                <label>Missing Part</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>