force-app/main/default/objects/DU_Damage__c/fields/DU_DamagedComponent__c.field-meta.xml
<CustomField>
    <fullName>DU_DamagedComponent__c</fullName>
    <description>CDM: Damaged component</description>
    <label>Damaged Component</label>
    <length>255</length>
    <type>Text</type>
</CustomField>