force-app/main/default/objects/DU_Damage__c/fields/DU_DamageDescription__c.field-meta.xml
<CustomField>
    <fullName>DU_DamageDescription__c</fullName>
    <description>CDM: Descritpion of the damage</description>
    <label>Damage Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>