force-app/main/default/objects/DU_Damage__c/fields/DU_RecommendedDamageRepairs__c.field-meta.xml
<CustomField>
    <fullName>DU_RecommendedDamageRepairs__c</fullName>
    <description>CDM: Recommended damage repair</description>
    <label>Recommended Damage Repairs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>